# NTNU-bio-ai-2

./: .gitignore  Cargo.toml  README.md  build_linux.sh  config.json
configs/: config.json  config_best.json  meta_config.json  pgo_config.json
python/: brute_force.py  execute_all_training_instances.py  hyperparametertuning.py  hyperparemetertuning-analysis.py  utils.py  visualizer.py
src/: config.rs  crossover_functions.rs  depot.rs  genetic_algorithm.rs  individual.rs  main.rs  mutation_functions.rs  patient.rs  population.rs  problem_instance.rs  selection_functions.rs
train/: test_0.json  test_1.json  test_2.json  train_0.json  train_1.json  train_2.json  train_3.json  train_4.json  train_5.json  train_6.json  train_7.json  train_8.json  train_9.json
