[package]
name = "bio-ai-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_with = "3.6.1"
rand = "0.8.5"
log = "0.4.21"
simple-logging = "2.0.2"
num_cpus = "1.14.0"
crossbeam= "0.8.4"
